Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "haskell_gentle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNV9D/tuh6pCHkvA3iFny34",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM8EWw1HhFEz1EgjaK3UxBC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,17 +58,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4mGx09C_ZeXG",
-        "outputId": "7a2af78b-0b93-4dc8-b19c-cb300ef59ac8"
+        "outputId": "f19fdc06-1660-4238-d718-df96c60667c8"
       },
       "source": [
         "!ghc --version"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/bin/bash: ghc: command not found\n"
+            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
           ],
           "name": "stdout"
         }
@@ -1201,15 +1202,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3Afd1DAExM2I"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "6FktdMRtgPHU"
@@ -1276,58 +1268,11 @@
         "# これは総称的「コンテナ」型を記述する能力のあることを示し、fmap のような、任意の木、\r\n",
         "# リストあるいは他の型の上で統一的に動作する関数を可能にする。\r\n",
         "\r\n",
-        "[型適用は関数適用とおなじやりかたで書ける。型 T a b\r\n",
-        "は (T a) b\r\n",
-        "のように構文解析される。タプルのような特\r\n",
-        "別な構文を使う型はカリー化可能な別のスタイルで書ける。関数については、\r\n",
-        "(->) が型構築子だ。f -> g と (->) f g\r\n",
-        "とは同じだ。同様に、[a] と [] a\r\n",
-        "とは同じだ。タプルについては、型構築子(同時にデー\r\n",
-        "タ構築子でもありますが)は (,)、(,,)\r\n",
-        "などとなる。]\r\n",
-        "\r\n",
-        "すでにご存知のように、型システムは式の中で型付けエラーを検出する。しか\r\n",
-        "し、不正な型式に起因するエラーについてはどうでしょうか。式\r\n",
-        "(+) 1 2 3 は型エラーになる。それは、 (+)\r\n",
-        "は 2 つしか引数をとらないからだ。同様に、 Tree\r\n",
-        "Int Int は、ある種のエラーを起こすはずだ。それ\r\n",
-        "は、Tree\r\n",
-        "型はひとつの引数しかとらないからだ。では、Haskell\r\n",
-        "は\r\n",
-        "どのようにして不正な型式を検出するのでしょうか。その答は、型の正当性を確\r\n",
-        "認する第 2 の型システムにある。それぞれの型は類 (\r\n",
-        "kind\r\n",
-        ")と結びついている。これはその型が正しく使用されることを\r\n",
-        "確認するものだ。\r\n",
-        "\r\n",
-        "型式は別々の類に分類される。これは次の 2\r\n",
-        "つの形式をとる。\r\n",
-        "\r\n",
-        "記号 *\r\n",
-        "は具体的なデータ対象に結びついた型の類をあらわす。すなわち、\r\n",
-        "もし、値 v の型が t であるなら、v の類は * で\r\n",
-        "なければならない。\r\n",
-        "\r\n",
-        "もし、k1 と k2 とが類ならば、k1->k2 は k1\r\n",
-        "という類の型をとり、k2 という類の型を返す型の類である。\r\n",
-        "\r\n",
-        "型構築子 Tree の類は、 *->* であり、Tree\r\n",
-        "Int の類は * だ。Functor\r\n",
-        "クラスのメンバーはすべて、類 *->* で\r\n",
-        "なければならず、類付けのエラーは、次のような宣言により引き起こされる。\r\n",
-        "\r\n",
-        "instance Functor Integer where\r\n",
-        "...\r\n",
-        "\r\n",
-        "なぜなら、Integer の類は * だからである。\r\n",
-        "類は Haskell\r\n",
-        "のプログラムの直接あらわれることはあらない。コンパイラが\r\n",
-        "型検査の前に類を推論する。「類宣言」のようなものは必要あらない。型シ\r\n",
-        "グネチャが類エラーをおこすとき以外は、類は Haskell\r\n",
-        "のプログラムの後ろに\r\n",
-        "隠れている。類は非常にシンプルなので、コンパイラは、類衝突がおこれば、\r\n",
-        "その旨のエラーメッセージを表示することができなければならない。類に関す\r\n",
-        "る詳細は §4.1.1 や §4.6 を参照してく ださい。\r\n"
+        "# 型適用は関数適用とおなじやりかたで書ける。型 T a b は (T a) b　と構文解析される。\r\n",
+        "# タプルのような特別な構文を使う型はカリー化可能な別のスタイルで書ける。\r\n",
+        "# 関数については、(->) が型構築子だ。f -> g と (->) f g とは同じだ。\r\n",
+        "# 同様に、[a] と [] aとは同じだ。\r\n",
+        "# タプルについては、型構築子は (,)、(,,) などとなる。\r\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1335,13 +1280,98 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "h--_PPf7rvGj"
+      },
+      "source": [
+        "# 型システムは式の中で型付けエラーを検出する。\r\n",
+        "# 式 (+) 1 2 3 は型エラーになる。それは (+) は 2 つしか引数をとらないからだ。\r\n",
+        "# 同様に、 Tree Int Int は、エラーを起こす。それは Tree 型はひとつの引数しかとらないからだ。\r\n",
+        "# Haskellはどのようにして不正な型式を検出するのか。\r\n",
+        "\r\n",
+        "# その答は、型の正当性を確認する第2の型システムにある。\r\n",
+        "# 型は類 (kind)と結びついている。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SlIXAGJjtLt9",
+        "outputId": "479017d6-1746-45f9-8e4d-95ae310d1e7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e $':k Eq'\r\n",
+        "!ghc -e $':k Integer'\r\n",
+        "!ghc -e $':k Functor'\r\n",
+        "!ghc -e $':k Num'\r\n",
+        "!ghc -e $':k Foldable'\r\n",
+        "!ghc -e $':k Ord'"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Eq :: * -> Constraint\n",
+            "Integer :: *\n",
+            "Functor :: (* -> *) -> Constraint\n",
+            "Num :: * -> Constraint\n",
+            "Foldable :: (* -> *) -> Constraint\n",
+            "Ord :: * -> Constraint\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_JMbT9o4tKBh"
+      },
+      "source": [
+        "# 型はは次の 2つの形式をとる。\r\n",
+        "\r\n",
+        "# 記号 * は具体的なデータ対象に結びついた型の類をあらわす。\r\n",
+        "# k1 と k2 とが類ならば、k1->k2 は k1 という類の型をとり、k2 という類の型を返す型の類である。\r\n",
+        "\r\n",
+        "# 型構築子 Tree の類は、 *->* であり、Tree Int の類は * だ。\r\n",
+        "# Functor クラスのメンバーはすべて、類 *->* でなければならず、\r\n",
+        "# 類付けのエラーは、次のような宣言により引き起こされる。\r\n",
+        "%%script false\r\n",
+        "\r\n",
+        "instance Functor Integer where ...\r\n",
+        "\r\n",
+        "# なぜなら、Integer の類は * だからである。\r\n",
+        "# 類は Haskell のプログラムの直接あらわれることはない。\r\n",
+        "# コンパイラが型検査の前に類を推論する。「類宣言」のようなものは必要ない。\r\n",
+        "# 型シグネチャが類エラーをおこすとき以外は、類は Haskellのプログラムの後ろに隠れている。\r\n",
+        "# 類は非常にシンプルなので、コンパイラは、類衝突がおこれば、その旨のエラーメッセージを表示する。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Afd1DAExM2I"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "U666LVobgIAO"
       },
       "source": [
+        "# 別の見方\r\n",
         "\r\n",
-        "別の見方\r\n",
-        "\r\n",
-        "型クラスの使い方のさらに進んだ例にいくまえに、Haskell\r\n",
+        "# 型クラスの使い方のさらに進んだ例にいく前に、Haskell\r\n",
         "の型クラスのふたつ\r\n",
         "の別の観点について言及してもいいかと思いる。第一は、オブジェクト指向プ\r\n",
         "ログラミング( OOP\r\n",
