Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOA1Y6p7ynE16ZOH1PoRxW4",
+      "authorship_tag": "ABX9TyO3V+msHmSWn1T+FYNhaS6N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,12 +58,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4mGx09C_ZeXG",
-        "outputId": "33bbf138-8880-413c-88c5-fdb74956e829"
+        "outputId": "0ebd0d5d-9612-4bdf-e4d0-e7d5a08a23e3"
       },
       "source": [
         "!ghc --version"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,75 +1423,46 @@
       "source": [
         "# 再び、型について\r\n",
         "\r\n",
-        "# Newtype 宣言\r\n",
+        "# newtype 宣言\r\n",
         "# 表現が既存の型と同一だが，型システムの中では別の型として識別されるような型を定義する。\r\n",
-        "# Haskell\r\n",
-        "では newtype\r\n",
-        "宣言が既存の型から新しい型をつくりだする。たとえば、\r\n",
-        "Integer\r\n",
-        "型を次のような宣言で用いて、自然数を表現することができ る。\r\n",
+        "# たとえば、Integer 型を次のような宣言で用いて、自然数を表現することができ る。\r\n",
+        "%%script false\r\n",
         "\r\n",
         "newtype Natural = MakeNatural Integer\r\n",
         "\r\n",
-        "この宣言は、完全に新しい型 Natural\r\n",
-        "を生成し、その構築子はひとつ の Integer\r\n",
-        "だけを引数にとる。この構築子 MakeNatural は\r\n",
-        "Natural と Integer との間の変\r\n",
-        "換をおこなう。\r\n",
+        "# 完全に新しい型 Natural を生成し、その構築子はひとつ の Integerだけを引数にとる。\r\n",
+        "# この構築子 MakeNatural は Natural と Integer との間の変換をおこなう。\r\n",
         "\r\n",
-        "toNatural :: Integer ->\r\n",
-        "Natural\r\n",
-        "toNatural x | x < 0 = error\r\n",
-        "\"Can't create negative\r\n",
-        "naturals!\"\r\n",
-        "| otherwise = MakeNatural x\r\n",
+        "toNatural               :: Integer -> Natural\r\n",
+        "toNatural x | x < 0     = error \"Can't create negative naturals!\" \r\n",
+        "            | otherwise = MakeNatural x\r\n",
         "\r\n",
-        "fromNatural :: Natural ->\r\n",
-        "Integer\r\n",
-        "fromNatural (MakeNatural i) =\r\n",
-        "i\r\n",
+        "fromNatural             :: Natural -> Integer\r\n",
+        "fromNatural (MakeNatural i) = i\r\n",
         "\r\n",
         "次のインスタンス宣言は Natural を Num\r\n",
-        "クラスに所属させ るものだ。\r\n",
+        "クラスに所属させる。\r\n",
         "\r\n",
         "instance Num Natural where\r\n",
-        "fromInteger = toNatural\r\n",
-        "x + y = toNatural (fromNatural\r\n",
-        "x + fromNatural y)\r\n",
-        "x - y = let r = fromNatural x\r\n",
-        "- fromNatural y in\r\n",
-        "if r < 0 then error \"Unnatural\r\n",
-        "subtraction\"\r\n",
-        "else toNatural r\r\n",
-        "x * y = toNatural (fromNatural\r\n",
-        "x * fromNatural y)\r\n",
+        "    fromInteger         = toNatural\r\n",
+        "    x + y               = toNatural (fromNatural x + fromNatural y)\r\n",
+        "    x - y               = let r = fromNatural x - fromNatural y in\r\n",
+        "                            if r < 0 then error \"Unnatural subtraction\"\r\n",
+        "                                     else toNatural r\r\n",
+        "    x * y               = toNatural (fromNatural x * fromNatural y)\r\n",
         "\r\n",
-        "この宣言なしでは、Natural は Num\r\n",
-        "には属することができ\r\n",
-        "ない。元の型に対するインスタンス宣言内容が、新しい型に持ち越されることはあ\r\n",
-        "らない。実際、この型の目的は、別の Num\r\n",
-        "のインスタンスを導入す ることなのだ。もし、Natural\r\n",
-        "が Integer の型シノニム\r\n",
-        "として宣言されていれば、これはできない。\r\n",
+        "この宣言なしでは、Natural は Num には属することができない。\r\n",
+        "元の型に対するインスタンス宣言内容が、新しい型に持ち越されることはあらない。\r\n",
+        "実際、この型の目的は、別の Numのインスタンスを導入す ることなのだ。\r\n",
+        "もし、Naturalが Integer の型シノニムとして宣言されていれば、これはできない。\r\n",
         "\r\n",
-        "これらはすべて、newtype 宣言ではなく data\r\n",
-        "宣言を用いて も機能する。しかし、data\r\n",
-        "宣言では、Natural の値の表\r\n",
-        "現にオーバヘッドが生じる。newtype を用いることで\r\n",
-        "data\r\n",
-        "宣言によって間接参照のレベルが深くなる(これは遅延性の故に\r\n",
-        "生じる)のを避けることができる。newtype、data\r\n",
-        "および type\r\n",
-        "宣言の間の関係についてのさらに詳しい議論は、レポートの\r\n",
-        "4.2.3 節を参照してくだ さい。\r\n",
+        "これらはすべて、newtype 宣言ではなく data宣言を用いて も機能する。\r\n",
+        "しかし、data宣言では、Natural の値の表現にオーバヘッドが生じる。\r\n",
+        "newtype を用いることで data 宣言によって間接参照のレベルが深くなる (これは遅延性の故に\r\n",
+        "生じる) のを避けることができる。\r\n",
         "\r\n",
-        "[キーワードをのぞけば、newtype\r\n",
-        "宣言は、単一フィールドをもつ単一 構築子の data\r\n",
-        "宣言と同じ構文を用いる。newtype を用い\r\n",
-        "て定義された型は通常の data\r\n",
-        "宣言で生成された型とほとんど同一な\r\n",
-        "のですから、これは当然だろう。]\r\n",
-        "\r\n"
+        "# キーワードをのぞけば、newtype 宣言は、単一フィールドをもつ単一 構築子の data\r\n",
+        "# 宣言と同じ構文を用いる。\r\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1502,8 +1473,7 @@
         "id": "5YJzpJFCnasi"
       },
       "source": [
-        "\r\n",
-        "6.2 フィールドラベル\r\n",
+        "# フィールドラベル\r\n",
         "Haskell\r\n",
         "のデータ型内のフィールドは、位置を手がかりにアクセスすることも、\r\n",
         "フィールドラベルを用いて名前でアクセスすることもできる。2\r\n",
