Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3V+msHmSWn1T+FYNhaS6N",
+      "authorship_tag": "ABX9TyNyua9fHFRu3oT+fPeUBgR4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -58,17 +58,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4mGx09C_ZeXG",
-        "outputId": "0ebd0d5d-9612-4bdf-e4d0-e7d5a08a23e3"
+        "outputId": "5286ddb7-f375-450f-8b73-3a026dbed143"
       },
       "source": [
         "!ghc --version"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
+            "/bin/bash: ghc: command not found\n"
           ],
           "name": "stdout"
         }
@@ -1355,15 +1355,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3Afd1DAExM2I"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "U666LVobgIAO"
@@ -1440,8 +1431,7 @@
         "fromNatural             :: Natural -> Integer\r\n",
         "fromNatural (MakeNatural i) = i\r\n",
         "\r\n",
-        "次のインスタンス宣言は Natural を Num\r\n",
-        "クラスに所属させる。\r\n",
+        "# 次のインスタンス宣言は Natural を Num クラスに所属させる。\r\n",
         "\r\n",
         "instance Num Natural where\r\n",
         "    fromInteger         = toNatural\r\n",
@@ -1451,15 +1441,15 @@
         "                                     else toNatural r\r\n",
         "    x * y               = toNatural (fromNatural x * fromNatural y)\r\n",
         "\r\n",
-        "この宣言なしでは、Natural は Num には属することができない。\r\n",
-        "元の型に対するインスタンス宣言内容が、新しい型に持ち越されることはあらない。\r\n",
-        "実際、この型の目的は、別の Numのインスタンスを導入す ることなのだ。\r\n",
-        "もし、Naturalが Integer の型シノニムとして宣言されていれば、これはできない。\r\n",
+        "# この宣言なしでは、Natural は Num には属することができない。\r\n",
+        "# 元の型に対するインスタンス宣言内容が、新しい型に持ち越されることはない。\r\n",
+        "# 実際、この型の目的は、別の Num のインスタンスを導入することな。\r\n",
+        "# もし、Naturalが Integer の型シノニムとして宣言されていれば、これはできない。\r\n",
         "\r\n",
-        "これらはすべて、newtype 宣言ではなく data宣言を用いて も機能する。\r\n",
-        "しかし、data宣言では、Natural の値の表現にオーバヘッドが生じる。\r\n",
-        "newtype を用いることで data 宣言によって間接参照のレベルが深くなる (これは遅延性の故に\r\n",
-        "生じる) のを避けることができる。\r\n",
+        "# これらはすべて、newtype 宣言ではなく data 宣言を用いて も機能する。\r\n",
+        "# しかし、data宣言では、Natural の値の表現にオーバヘッドが生じる。\r\n",
+        "# newtype を用いることで data 宣言によって間接参照のレベルが深くなる (これは遅延性の故) \r\n",
+        "# のを避けることができる。\r\n",
         "\r\n",
         "# キーワードをのぞけば、newtype 宣言は、単一フィールドをもつ単一 構築子の data\r\n",
         "# 宣言と同じ構文を用いる。\r\n"
@@ -1468,44 +1458,49 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Afd1DAExM2I"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5YJzpJFCnasi"
       },
       "source": [
         "# フィールドラベル\r\n",
-        "Haskell\r\n",
-        "のデータ型内のフィールドは、位置を手がかりにアクセスすることも、\r\n",
-        "フィールドラベルを用いて名前でアクセスすることもできる。2\r\n",
-        "次 元の点に対する型について考察しよう。\r\n",
+        "# Haskell のデータ型内のフィールドは、位置を手がかりにアクセスすることも、\r\n",
+        "# フィールドラベルを用いて名前でアクセスすることもできる。\r\n",
+        "# 2次元の点に対する型について考察する。\r\n",
+        "%%script false\r\n",
         "\r\n",
         "data Point = Pt Float Float\r\n",
         "\r\n",
-        "Point の構成要素は、構築子 Pt\r\n",
-        "の第一引数と第二引数だ。 次のような関数\r\n",
+        "# Point の構成要素は、構築子 Pt の第一引数と第二引数だ。 次のような関数\r\n",
         "\r\n",
         "pointx :: Point -> Float\r\n",
         "pointx (Pt x _) = x\r\n",
         "\r\n",
-        "は、第一の構成要素をいくぶん説明的に参照するのに使われていますが、もっと、\r\n",
-        "大きな構造に対して、このような関数を手でつくるのは面倒だ。\r\n",
+        "# は、第一の構成要素をいくぶん説明的に参照するのに使われているが、もっと、\r\n",
+        "# 大きな構造に対して、このような関数を手でつくるのは面倒だ。\r\n",
         "\r\n",
-        "data 宣言における構築子は、フィールド名(波括弧でくくら\r\n",
-        "れて)付で宣言されることもある。フィールド名は構築子の構成要素を位置\r\n",
-        "によってではなく、名前で同定する。以下はもうひとつの\r\n",
-        "Point の 定義だ。\r\n",
+        "# data 宣言における構築子は、フィールド名付で (波括弧で括られて) 宣言されることもある。\r\n",
+        "# フィールド名は構築子の構成要素を位置によってではなく、名前で同定する。\r\n",
         "\r\n",
-        "data Point = Pt {pointx,\r\n",
-        "pointy :: Float}\r\n",
+        "data Point = Pt {pointx, pointy :: Float}\r\n",
         "\r\n",
-        "このデータ型はその前で定義した Point\r\n",
-        "と同一のものだ。構築子 Pt\r\n",
-        "は両方でおなじだ。しかし、この宣言ではふたつのフィールド名、\r\n",
-        "pointx と pointy\r\n",
-        "とが定義されている。これらのフィー\r\n",
-        "ルド名は構造の中から構成要素を取り出すための選択関数 (\r\n",
-        "selector function )\r\n",
-        "としても使うことができる。この例では 選択関数は、\r\n",
+        "# このデータ型はその前で定義した Point\r\n",
+        "# と同一のものだ。構築子 Pt\r\n",
+        "# は両方でおなじだ。しかし、この宣言ではふたつのフィールド名、\r\n",
+        "# pointx と pointy\r\n",
+        "# とが定義されている。これらのフィー\r\n",
+        "# ルド名は構造の中から構成要素を取り出すための選択関数 (\r\n",
+        "# selector function )\r\n",
+        "# としても使うことができる。この例では 選択関数は、\r\n",
         "\r\n",
         "pointx :: Point -> Float\r\n",
         "pointy :: Point -> Float\r\n",
