Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_gentle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOe/fLUmdLTpTPuP7l15Qze",
+      "authorship_tag": "ABX9TyOTFXRWzEuXYnGIQ1sVrbce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1683,38 +1683,25 @@
         "# 入力の読み込み、ウィンドウのオープンなどがある。\r\n",
         "# このようなアクションは Haskell の言語のコアの部分からは、切離されている。\r\n",
         "\r\n",
-        "Haskell の I/O システムは数学のモナド (monad) を基礎として築かれている。\r\n",
-        "しかし、I/O システム\r\n",
-        "を使う上で底流にあるモナドの理論を理解する必要はない。\r\n",
-        "むしろ、モナ ドの理論は、I/O\r\n",
-        "にたまたま適合した概念上の構造だ。\r\n",
-        "単純な算術演算を実行\r\n",
-        "するのに群論を理解する必要がないのと同じで、Haskell\r\n",
-        "の I/O を実行するの\r\n",
-        "にモナド理論を理解する必要ないということだ。\r\n",
-        "モナドに関する詳細な説明は、 9 節を参照してください。\r\n",
+        "# Haskell の I/O システムは数学のモナド (monad) を基礎として築かれている。\r\n",
+        "# しかし、I/O システムを使う上で底流にあるモナドの理論を理解する必要はない。\r\n",
+        "# モナドの理論は、I/O にたまたま適合した概念上の構造である。\r\n",
+        "# 単純な算術演算を実行するのに群論を理解する必要がないのと同じで、\r\n",
+        "# Haskell の I/O を実行するのにモナド理論を理解する必要はない。\r\n",
         "\r\n",
-        "I/O\r\n",
-        "システムを構築している、モナド演算子は別の目的にも使用される。\r\n",
-        "モナ ドのよりつっこんだ観察はのちほどおこないる。\r\n",
-        "ここでは、モナドという用語 を使うのは避けて、I/O\r\n",
-        "システムの使い方に集中しよう。\r\n",
-        "I/O モナドを単に\r\n",
-        "抽象データ型だと考えておくのがいいだろう。\r\n",
+        "# I/O システムを構築しているモナド演算子は別の目的にも使用される。\r\n",
+        "# ここでは、モナドという用語を使うのは避けて、I/O システムの使い方に集中しよう。\r\n",
+        "# I/O モナドを単に抽象データ型だと考えておくのがいいだろう。\r\n",
         "\r\n",
-        "アクションは式言語のHaskellでは呼出すのではなく定義するものだ。\r\n",
-        "アクショ\r\n",
-        "ンの定義を評価することでは、実際のアクションは起こらない。\r\n",
-        "むしろ、アク\r\n",
-        "ションは、ここまで考えてきた式の評価というものの外側で起こることだ。\r\n",
+        "# アクションは Haskell では呼出すのではなく定義するものである。\r\n",
+        "# アクションの定義を評価することでは、実際のアクションは起こらない。\r\n",
+        "# むしろ、アクションは、ここまで考えてきた式の評価というものの外側で起こることである。\r\n",
         "\r\n",
-        "アクションはシステムプリミティブとして定義されるようにアトミックなもので\r\n",
-        "もあり、また、一連のアクションの合成でもある。\r\n",
-        "I/O モナドは複合アクショ\r\n",
-        "ンを構成するためのプリミティブをふくみ、他の言語では ;\r\n",
-        "を使って、 文を一列にならべるのと同じように構成する。\r\n",
-        "このモナドの機構はプログラム\r\n",
-        "のなかのアクションをくっつける糊のような役目をする。\r\n",
+        "# アクションはシステムプリミティブとして定義されるようにアトミックなものであり、\r\n",
+        "# また、一連のアクションの合成でもある。\r\n",
+        "# I/O モナドは複合アクションを構成するためのプリミティブをふくみ、\r\n",
+        "# 他の言語では ; (セミコロン) を使って、 文を一列にならべるのと同じように構成する。\r\n",
+        "# このモナドの機構はプログラムのなかのアクションをくっつける糊のような役目をする。\r\n",
         "\r\n"
       ],
       "execution_count": null,
@@ -1726,30 +1713,24 @@
         "id": "agn1k1GM_Vks"
       },
       "source": [
-        "\r\n",
-        "7.1 I/O の基本演算\r\n",
-        "各 I/O のアクションはそれぞれ値を返する。\r\n",
-        "型システムにおいては、返り値 は、IO\r\n",
-        "という「タグ」がつけられている。\r\n",
-        "これはアクションを他の 値と区別するためだ。\r\n",
-        "たとえば、関数 getChar の型は、\r\n",
+        "# I/O の基本演算\r\n",
+        "# 各 I/O のアクションはそれぞれ値を返する。\r\n",
+        "# 型システムにおいては、返り値 は、IO という「タグ」がつけられている。\r\n",
+        "# これはアクションを他の 値と区別するためである。\r\n",
+        "# たとえば、関数 getChar の型は、次のようなものである。\r\n",
+        "%%script false\r\n",
         "\r\n",
         "getChar :: IO Char\r\n",
         "\r\n",
-        "だ。\r\n",
-        "この IO Char は getChar\r\n",
-        "が呼出されたときに、\r\n",
-        "文字を返すなんらかの動作をする、ということを示している。\r\n",
-        "意味のある値を 返さないアクションにたいしてはユニット型\r\n",
-        "() を用いる。\r\n",
-        "たとえ ば、関数 putChar の型は、\r\n",
+        "# この IO Char は getChar が呼出されたときに、文字を返すなんらかの動作をする、ということを示している。\r\n",
+        "# 意味のある値を 返さないアクションにたいしてはユニット型 () を用いる。\r\n",
+        "# たとえば、関数 putChar の型は、次のようなものである。\r\n",
         "\r\n",
         "putChar :: Char -> IO ()\r\n",
         "\r\n",
-        "で、この関数は引数として文字をとりますが、特に意味のある値は返しない。\r\n",
+        "# この関数は引数として文字を取るが、特に意味のある値は返さない。\r\n",
         "\r\n",
-        "アクションは、すこし謎めいた名前の演算子 >>= (あるいは\r\n",
-        "`bind' )を使って、順序付けをする。\r\n",
+        "アクションは、すこし謎めいた名前の演算子 >>= (あるいは `bind` )を使って、順序付けをする。\r\n",
         "この演算子を直接使わず、 do\r\n",
         "記法という糖衣構文を使うこともできる。\r\n",
         "この記法では、順序制\r\n",
