Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOS0M40Cl3IkXKr1bNTIR2Z",
+      "authorship_tag": "ABX9TyOloD/fv/TbpTFUCSZgRdec",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "source": [
         "!ghc --version"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1892,6 +1892,95 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7azDhnQ2Jvw2"
+      },
+      "source": [
+        "# 例外処理 exception handling\r\n",
+        "# ここまでは、I/O 演算中の例外の問題を避けてきた。\r\n",
+        "# もし、getChar がファイルの最後にあたったら、どうなるか。\r\n",
+        "# _|_ に対してはエラー error という用語を使う。\r\n",
+        "# これは、停止しない、あるいは、パターンマッチが失敗した、というような回復不可能な場合に使う。\r\n",
+        "# 一方、例外 exception は、I/O モナド内で捕捉可能および処理可能なものである。\r\n",
+        "# I/O モナド中での、「file not found」などの例外的状況をあつかうには、standard ML\r\n",
+        "# の入出力にある機能にあるような、ハンドリング機構を使いる。\r\n",
+        "# 特別な構文や意味論を用いることはない。\r\n",
+        "# 例外処理は、I/Oの順序付け演算子の定義の一部になっている。"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4THNFokY_Z1p"
+      },
+      "source": [
+        "# 例外は特別なデータ型 IOError としてコード化されている。\r\n",
+        "# この 型は I/O モナド中でおこりうるすべての例外を表わしている。\r\n",
+        "# これは一種の 抽象型で、ユーザが利用可能な IOError の構築子はない。\r\n",
+        "# IOError 型の値に対して使うことができる述語がいくつかある。\r\n",
+        "\r\n",
+        "%%script false\r\n",
+        "\r\n",
+        "isEOFError :: IOError -> Bool\r\n",
+        "\r\n",
+        "# という関数はエラーが、ファイル終端条件でひきおこされたものかどうかを判定する。\r\n",
+        "# IOError を抽象型とすることで、明示的なデータ型の変更なしで、新しい種類のエラーをシステムに導入することができる。\r\n",
+        "# この isEOFError 関数は IO ライブラリのなかで定義されているので、明示的にインポートする必要がある。\r\n",
+        "\r\n",
+        "# 例外ハンドラ は IOError -> IO a という型になる。\r\n",
+        "# catch 関数は例外ハンドラをアクションあるいはアクションの集まりと関連づける。\r\n",
+        "\r\n",
+        "catch                     :: IO a -> (IOError -> IO a) -> IO a\r\n",
+        "\r\n",
+        "# catch の引数はアクションとハンドラである。\r\n",
+        "# アクションが成功すれば、ハンドラを起動せずにその結果だけを返する。\r\n",
+        "# エラーが起これば、IOError 型の値をハンドラに渡し、そのハンドラに関連づけられているアクションを起動する。\r\n",
+        "# 例として、エラーにであうと改行を返す getChar をあげておこう。\r\n",
+        "\r\n",
+        "getChar'                :: IO Char\r\n",
+        "getChar'                =  getChar `catch` (\\e -> return '\\n')\r\n",
+        "\r\n",
+        "# これは、すべてのエラーについて同じ処理をしているので、あまり洗練された実装ではない。\r\n",
+        "# もし、ファイル終端になった場合だけをわけたい場合には、エラーの種類を確かめなければならない。\r\n",
+        "\r\n",
+        "getChar'                :: IO Char\r\n",
+        "getChar'                =  getChar `catch` eofHandler where\r\n",
+        "    eofHandler e = if isEofError e then return '\\n' else ioError e\r\n",
+        "\r\n",
+        "# ここで使われている ioError 関数は次の例外ハンドラに例外を投げる。\r\n",
+        "# ioError の型は、\r\n",
+        "\r\n",
+        "ioError :: IOError -> IO a\r\n",
+        "\r\n",
+        "# である。\r\n",
+        "# これは、つぎの I/O アクションを実行するかわりに、\r\n",
+        "# 制御を例外ハンドラに移すという点をのぞけば、return と類似している。\r\n",
+        "# catch の入れ子になった呼び出しも可能である。\r\n",
+        "# 入れ子になった catch の呼び出しは、入れ子になった例外ハンドラを生成する。\r\n",
+        "# この例を、getChar' を使って getLine を再定義することで示そう。\r\n",
+        "\r\n",
+        "getLine'        :: IO String\r\n",
+        "getLine'        = catch getLine'' (\\err -> return (\"Error: \" ++ show err))\r\n",
+        "        where\r\n",
+        "                   getLine'' = do c <- getChar'\r\n",
+        "                         if c == '\\n' then return \"\"\r\n",
+        "                                            else do l <- getLine'\r\n",
+        "                                                    return (c:l)\r\n",
+        "\r\n",
+        "\r\n",
+        "# 入れ子になったエラーハンドラは getChar' がファイル終端を捕捉することを可能にしている。\r\n",
+        "# 一方で、ほかのエラーがおこると \"Error: \" ではじまる文字列が、getLine' から戻る。\r\n",
+        "\r\n",
+        "# Haskell では利便性確保のために、プログラムの最上位レベルにプログラムを停止し、\r\n",
+        "# 例外を印字する例外ハンドラが用意されている。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3Afd1DAExM2I"
@@ -1903,135 +1992,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7azDhnQ2Jvw2"
-      },
-      "source": [
-        "# 例外処理\r\n",
-        "ここまでは、I/O 演算中の例外の問題を避けてきた。\r\n",
-        "もし、 getChar がファイルの最後にあたったら、どうなるか。\r\n",
-        "(_|_ に対しては error という用語を使う。\r\n",
-        "これは、\r\n",
-        "停止しない、あるいは、パターンマッチが失敗した、というような回復不可能な\r\n",
-        "条件の場合に使う。\r\n",
-        "一方、例外は、I/O モナド内で捕捉可能および処理可能なものである。\r\n",
-        ") I/O モナド中での、「file not found」などの例外的状況をあつかうには、standard ML\r\n",
-        "の入出力にある機能にあるような、ハンドリング機構を使いる。\r\n",
-        "特別な構文や意味論を用いることはない。\r\n",
-        "例外処理は、I/Oの順序付け演算子の定義の一部になっている。\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4THNFokY_Z1p"
-      },
-      "source": [
-        "\r\n",
-        "エラーは特別なデータ型 IOError\r\n",
-        "としてコード化されている。\r\n",
-        "この 型は I/O\r\n",
-        "モナド中でおこりうるすべての例外を表わしている。\r\n",
-        "これは一種の 抽象型で、ユーザが利用可能な IOError\r\n",
-        "の構築子はない。\r\n",
-        "述語 がいくつか IOError\r\n",
-        "型の値にたいして使うことができる。\r\n",
-        "たとえば、\r\n",
-        "\r\n",
-        "isEOFError :: IOError -> Bool\r\n",
-        "\r\n",
-        "という関数はエラーが、ファイル終端条件でひきおこされたものかどうかを判定\r\n",
-        "する。\r\n",
-        "IOError\r\n",
-        "を抽象型とすることで、明示的なデータ型の変更な\r\n",
-        "しで、新しい種類のエラーをシステムに導入することができる。\r\n",
-        "この isEOFError 関数はプレリュードとは別の IO\r\n",
-        "ライブラリの\r\n",
-        "なかで定義されている、それゆえ、プログラム中に明示的にインポートする必\r\n",
-        "要がある。\r\n",
-        "\r\n",
-        "例外ハンドラ は IOError -> IO a とい\r\n",
-        "う型になる。\r\n",
-        "catch 関数は例外ハンドラをアクションあるいはア\r\n",
-        "クションの集まりと関連づける。\r\n",
-        "\r\n",
-        "catch :: IO a -> (IOError ->\r\n",
-        "IO a) -> IO a\r\n",
-        "\r\n",
-        "catch の引数はアクションとハンドラである。\r\n",
-        "アクションが成功すれば、\r\n",
-        "ハンドラを起動せずにその結果だけを返する。\r\n",
-        "エラーが起これば、 IOError\r\n",
-        "型の値をハンドラにわたし、そのハンドラに関連づけられて\r\n",
-        "いるアクションを起動する。\r\n",
-        "例として、エラーにであうと改行を返す getChar\r\n",
-        "をあげておこう。\r\n",
-        "\r\n",
-        "getChar' :: IO Char\r\n",
-        "getChar' = getChar `catch` (\\e\r\n",
-        "-> return '\\n')\r\n",
-        "\r\n",
-        "これは、すべてのエラーについて同じ処理をしていますので、あまり洗練された\r\n",
-        "実装ではない。\r\n",
-        "もし、ファイル終端になった場合だけをわけたい場合には、\r\n",
-        "エラーの種類を確かめなければならない。\r\n",
-        "\r\n",
-        "getChar' :: IO Char\r\n",
-        "getChar' = getChar `catch`\r\n",
-        "eofHandler where\r\n",
-        "eofHandler e = if isEofError e\r\n",
-        "then return '\\n' else ioError\r\n",
-        "e\r\n",
-        "\r\n",
-        "ここで使われている ioError\r\n",
-        "関数は次の例外ハンドラに例外を投げま す。\r\n",
-        "ioError の型は、\r\n",
-        "\r\n",
-        "ioError :: IOError -> IO a\r\n",
-        "\r\n",
-        "である。\r\n",
-        "これは、つぎの I/O\r\n",
-        "アクションを実行するかわりに、制御を例外ハンド\r\n",
-        "ラに移すという点をのぞけば、return と類似している。\r\n",
-        "catch の入れ子になった呼び出しも可能である。\r\n",
-        "入れ子になった catch\r\n",
-        "の呼び出しは、入れ子になった例外ハンドラを生成する。\r\n",
-        "こ の例を、getChar' を使って getLine\r\n",
-        "を再定義することで示 しよう。\r\n",
-        "\r\n",
-        "getLine' :: IO String\r\n",
-        "getLine' = catch getLine''\r\n",
-        "(\\err -> return (\"Error: \" ++\r\n",
-        "show err))\r\n",
-        "where\r\n",
-        "getLine'' = do c <- getChar'\r\n",
-        "if c == '\\n' then return \"\"\r\n",
-        "else do l <- getLine'\r\n",
-        "return (c:l)\r\n",
-        "\r\n",
-        "\r\n",
-        "入れ子になったエラーハンドラは getChar'\r\n",
-        "がファイル終端を捕捉す ることを可能にしている。\r\n",
-        "一方で、ほかのエラーがおこると \"Error: \"\r\n",
-        "ではじまる文字列が、getLine' からもどり る。\r\n",
-        "\r\n",
-        "Haskell\r\n",
-        "では利便性確保のために、プログラムの最上位レベルにプログラムを停\r\n",
-        "止し、例外を印字する例外ハンドラが用意されている。\r\n",
-        "\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "sxwX91N1_Ptk"
       },
       "source": [
-        "\r\n",
-        "7.4 ファイル、チャネル、ハンドル\r\n",
+        "# ファイル、チャネル、ハンドル\r\n",
         "I/O\r\n",
         "モナドや例外処理機構が提供するもののほか、Haskell の\r\n",
         "I/O は、他の言\r\n",
