Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOloD/fv/TbpTFUCSZgRdec",
+      "authorship_tag": "ABX9TyPJ7L+fRikmxpivIxf92oH2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1996,102 +1996,59 @@
       },
       "source": [
         "# ファイル、チャネル、ハンドル\r\n",
-        "I/O\r\n",
-        "モナドや例外処理機構が提供するもののほか、Haskell の\r\n",
-        "I/O は、他の言\r\n",
-        "語にあるものとほとんど同じ機構が備わっている。\r\n",
-        "これらの関数の多くは、プ レリュードではなくて、IO\r\n",
-        "ライブラリにある。\r\n",
-        "それゆえ、スコー\r\n",
-        "プのなかへ明示的にインポートする必要がある。\r\n",
-        "(モジュールとインポート にいついては 11\r\n",
-        "節で議論する。\r\n",
-        ")\r\n",
-        "さらに、これらの関数の多くはメインのレポートではなく、ライブラリレポート\r\n",
-        "の方で議論されている。\r\n",
+        "# I/O モナドや例外処理機構が提供するもののほか、\r\n",
+        "# Haskell の I/O は、他の言語にあるものとほとんど同じ機構が備わっている。\r\n",
         "\r\n",
-        "ファイルをオープンするとハンドル (型は Handle )\r\n",
-        "が生成 されて、これを使って I/O のやりとりをする。\r\n",
-        "このハンドルをクローズする\r\n",
-        "と、それに関連付けられているファイルがクローズする。\r\n",
+        "# ファイルをオープンするとハンドル (型は Handle) が生成されて、これを使って I/O のやりとりをする。\r\n",
+        "# このハンドルをクローズすると、それに関連付けられているファイルがクローズする。\r\n",
+        "%%script false\r\n",
         "\r\n",
-        "type FilePath = String -- path\r\n",
-        "names in the file system\r\n",
-        "openFile :: FilePath -> IOMode\r\n",
-        "-> IO Handle\r\n",
-        "hClose :: Handle -> IO ()\r\n",
-        "data IOMode = ReadMode |\r\n",
-        "WriteMode | AppendMode |\r\n",
-        "ReadWriteMode\r\n",
+        "type FilePath         =  String  -- path names in the file system\r\n",
+        "openFile              :: FilePath -> IOMode -> IO Handle\r\n",
+        "hClose                :: Handle -> IO () \r\n",
+        "data IOMode           =  ReadMode | WriteMode | AppendMode | ReadWriteMode\r\n",
         "\r\n",
-        "\r\n",
-        "ハンドルはチャネルにも関連付けられる。\r\n",
-        "チャネルはファイルとは\r\n",
-        "直接結びつかないコミュニケーションポートである。\r\n",
-        "いくつかのチャネルハンドル は定義済になっている。\r\n",
-        "たとえば、stdin (標準入力)、 stdout\r\n",
-        "(標準出力)、stderr (標準エラー) である。\r\n",
-        "hGetChar や hPutChar の文字単位の I/O\r\n",
-        "演算は、引数のひ とつとして、ハンドルをとる。\r\n",
-        "さきほどの getChar 関数は次のよ\r\n",
-        "うに定義されている。\r\n",
+        "# ハンドルはチャネルにも関連付けられる。\r\n",
+        "# チャネルはファイルとは直接結びつかないコミュニケーションポートである。\r\n",
+        "# いくつかのチャネルハンドルは定義済になっている。\r\n",
+        "# たとえば、stdin (標準入力)、 stdout (標準出力)、stderr (標準エラー) である。\r\n",
+        "# hGetChar や hPutChar の文字単位の I/O演算は、引数のひ とつとして、ハンドルをとる。\r\n",
+        "# さきほどの getChar 関数は次のように定義されている。\r\n",
         "\r\n",
         "getChar = hGetChar stdin\r\n",
         "\r\n",
+        "# Haskellでは内容全体をひとつの文字列として返すファイルやチャネルが使える。\r\n",
         "\r\n",
-        "Haskell\r\n",
-        "では内容全体をひとつの文字列として返すファイルやチャネルが使えま\r\n",
-        "す。\r\n",
+        "getContents :: Handle -> IO String\r\n",
         "\r\n",
-        "getContents :: Handle -> IO\r\n",
-        "String\r\n",
+        "# 実行上、getContents はチャネルやファイルの全内容を一度にすべて\r\n",
+        "# 読みこまなければならず、メモリや実行時間が足りなくなるということが起こりそうに見える。\r\n",
+        "# しかし、それは間違いである。\r\n",
+        "# 鍵となる要点は、 getContents は文字の「遅延」(すなわち非正格)リストを返すということである。\r\n",
+        "# このリストの要素は、他のリストと同様に、「必要になってはじめて」読み込まれるのである。\r\n",
+        "# この要求駆動の振舞いの実装は、計算側からの要求があるたびに、\r\n",
+        "# 一度に一文字づつファイルから読みこむことで実現する。\r\n",
         "\r\n",
-        "実行上、getContents\r\n",
-        "はチャネルやファイルの全内容を一度にすべて\r\n",
-        "読みこまなければならず、メモリや実行時間が足りなくなるということが起こり\r\n",
-        "そうに見える。\r\n",
-        "しかし、それは違いる。\r\n",
-        "鍵となる要点は、 getContents\r\n",
-        "は文字の「遅延」(すなわち非正格)リストを返すという\r\n",
-        "ことである。\r\n",
-        "(Haskell\r\n",
-        "では文字列は単なる文字のリストであるということを思い\r\n",
-        "出してください。\r\n",
-        ") このリストの要素は、他のリストと同様に、「必要になって\r\n",
-        "はじめて」読み込まれるのである。\r\n",
-        "この要求駆動の振舞いの実装は、計算側からの\r\n",
-        "要求があるたびに、一度に一文字づつファイルから読みこむことで実現すること\r\n",
-        "が期待されている。\r\n",
+        "# 次の例はファイルをコピーする Haskell のプログラムである。\r\n",
         "\r\n",
-        "次の例はファイルをコピーする Haskell\r\n",
-        "のプログラムである。\r\n",
+        "main = do fromHandle <- getAndOpenFile \"Copy from: \" ReadMode\r\n",
+        "          toHandle   <- getAndOpenFile \"Copy to: \" WriteMode \r\n",
+        "          contents   <- hGetContents fromHandle\r\n",
+        "          hPutStr toHandle contents\r\n",
+        "          hClose toHandle\r\n",
+        "          putStr \"Done.\"\r\n",
         "\r\n",
-        "main = do fromHandle <-\r\n",
-        "getAndOpenFile \"Copy from: \"\r\n",
-        "ReadMode\r\n",
-        "toHandle <- getAndOpenFile\r\n",
-        "\"Copy to: \" WriteMode\r\n",
-        "contents <- hGetContents\r\n",
-        "fromHandle\r\n",
-        "hPutStr toHandle contents\r\n",
-        "hClose toHandle\r\n",
-        "putStr \"Done.\"\r\n",
-        "\r\n",
-        "getAndOpenFile :: String ->\r\n",
-        "IOMode -> IO Handle\r\n",
+        "getAndOpenFile          :: String -> IOMode -> IO Handle\r\n",
         "\r\n",
         "getAndOpenFile prompt mode =\r\n",
-        "do putStr prompt\r\n",
-        "name <- getLine\r\n",
-        "catch (openFile name mode)\r\n",
-        "(\\_ -> do putStrLn (\"Cannot\r\n",
-        "open \"++ name ++ \"\\n\")\r\n",
-        "getAndOpenFile prompt mode)\r\n",
+        "    do putStr prompt\r\n",
+        "       name <- getLine\r\n",
+        "       catch (openFile name mode)\r\n",
+        "             (\\_ -> do putStrLn (\"Cannot open \"++ name ++ \"\\n\")\r\n",
+        "                       getAndOpenFile prompt mode)\r\n",
         "\r\n",
         "\r\n",
-        "遅延性のある getContents\r\n",
-        "関数を使うと、ファイルの内容全部を\r\n",
-        "一度にメモリへ読み込む必要がなくなる。\r\n",
+        "遅延性のある getContents 関数を使うと、ファイルの内容全部を一度にメモリへ読み込む必要がなくなる。\r\n",
         "もし、hPutStr がバッ\r\n",
         "ファとして固定長の文字列を採用するなら、一度にメモリへ読み込むには、入力\r\n",
         "ファイル 1 ブロック分だけが必要である。\r\n",
